Run claude code
Prompt:
Build a Shopify Function that supports a tiered discount campaign,
buy 2 or more of an item get 5% off those items,
spend over $100 get an additional
10% off the order subtotal,
spend $200 get free shipping.
Make it fully configurable

--- a/extensions/tiered/locales/en.default.json
+++ b/extensions/tiered/locales/en.default.json
@@ -1,4 +1,4 @@
 {
-  "name": "tiered",
-  "description": "tiered"
+  "name": "Tiered Discount Campaign",
+  "description": "Configurable tiered discount system: quantity discounts, order value discounts, and free shipping thresholds"
 }
